# AI_Engineering_Agentic_Track_The_Complete_Agents_Course

./: .gitignore  README.md  pyproject.toml
agents/1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  app.py
agents/2_openai/: 1_lab1.ipynb
