[project]
name = "ai-engineering-agentic-track-the-complete-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.5.1",
    "mlx>=0.30.6",
    "mlx-lm>=0.30.7",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "openai-agents[litellm]>=0.9.0",
    "pypdf>=6.7.0",
    "requests>=2.32.5",
]
